--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hemophilia Dose Calculator</title>
 </head>
-<body>
+<body style="text-align: center;">
     <h2>Hemophilia Patient Dose Calculator</h2>
 
     <form id="doseCalculatorForm">
