--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
             let doseFactor;
             if (type === "A") {
                 if (bleedingSite === "brain") {
-                    doseFactor = 100; // IU/kg for Hemophilia A (brain bleeding)
+                    doseFactor = 50;
                 } else {
-                    doseFactor = 25; // IU/kg for Hemophilia A (joint bleeding)
+                    doseFactor = 30;
                 }
             } else if (type === "B") {
                 if (bleedingSite === "brain") {
-                    doseFactor = 100; // IU/kg for Hemophilia B (brain bleeding)
+                    doseFactor = 60;
                 } else {
-                    doseFactor = 25; // IU/kg for Hemophilia B (joint bleeding)
+                    doseFactor = 40;
                 }
             }
 
