--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>
             <img src="logo.png" alt="Hemophilia Society Logo" class="logo">
             <h1>Hemophilia Society Calcutta Chapter</h1>
-            <p>Factor Dose Calculator</p>
+            <h2>Factor Dose Calculator<h2>
         </header>
         
         <form id="doseCalculatorForm">
